[package]
name = "os"
version = "0.1.0"
edition = "2021"



[profile.dev]

[profile.release]
panic="abort"

[dependencies]
bootloader = {version="0.9.23", features = ["map_physical_memory"]}
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0" #for sending data to serial port.
pic8259="0.10.1"
pc-keyboard = "0.5.0"


[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio","-display","none"]
test-success-exit-code = 33  # (0x10 << 1) | 1

[package.metadata.bootloader]
physical-memory-offset="0x0000f00000000000"

[[test]]
name = "should_panic"
harness = false

[[test]]
name="stack_overflow"
harness = false
